Adjust logo styles and department text formatting

--- a/templates/register.html
+++ b/templates/register.html
@@ -57,7 +57,7 @@
       .logo img {
         width: 125px;
         height: auto;
-        border-radius: 40px;
+        border-radius: 30px;
         object-fit: contain;
         background: transparent;
         /* mask-image: radial-gradient(
@@ -515,7 +515,7 @@
         }
 
         .logo{
-          height: 70px;
+          height: 75px;
           
         }
          .logo img{
@@ -637,7 +637,7 @@
         >
       </p>
       <div class="dept">
-        Department of <br /> Computer Science & Information Technology
+        Department of <br /> Computer Science <span style="font-family: 'Times New Roman', Times, serif" >&</span> Information Technology
       </div>
       <div class="logo">
          <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo">
